--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
 	"name": "latex-helper",
 	"displayName": "LaTeX Helper",
 	"description": "Adds some utilities for writing in LaTeX. Primarily aimed at math articles.",
+	"publisher": "Aritra Bhowmick",
+	"author": "Aritra Bhowmick",
+	"license": "MIT",
 	"version": "0.0.1",
+	"repository": {
+		"type": "git",
+		"url": "https:\\\\www.github.com\\ChesterXXX"
+	},
 	"engines": {
 		"vscode": "^1.95.0"
 	},
@@ -20,12 +27,12 @@
 				"title": "Hello World"
 			}
 		],
-		"configuration":[
+		"configuration": [
 			{
 				"title": "LaTeX Helper Configuration",
 				"properties": {
-					"latex-helper.inputTextHighlightColor" : {
-						"type":"string",
+					"latex-helper.inputTextHighlightColor": {
+						"type": "string",
 						"default": "DodgerBlue",
 						"description": "Color to highlight the text inside \\input{}."
 					}
@@ -45,17 +52,17 @@
 		"test": "vscode-test"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.95.0",
 		"@types/mocha": "^10.0.9",
-		"@types/node": "20.x",
+		"@types/node": "^22.9.0",
+		"@types/vscode": "^1.95.0",
 		"@typescript-eslint/eslint-plugin": "^8.10.0",
 		"@typescript-eslint/parser": "^8.7.0",
-		"eslint": "^9.13.0",
-		"typescript": "^5.6.3",
-		"ts-loader": "^9.5.1",
-		"webpack": "^5.95.0",
-		"webpack-cli": "^5.1.4",
 		"@vscode/test-cli": "^0.0.10",
-		"@vscode/test-electron": "^2.4.1"
+		"@vscode/test-electron": "^2.4.1",
+		"eslint": "^9.13.0",
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.6.3",
+		"webpack": "^5.95.0",
+		"webpack-cli": "^5.1.4"
 	}
 }
