--- a/package.json
+++ b/package.json
@@ -30,19 +30,23 @@
 			},
 			{
 				"command": "latex-helper.sortBibFileByCitationKey",
-				"title": "LaTeX Helper: Sort bib file by citation keys"
+				"title": "LaTeX Helper: Sort bib file by citation keys",
+				"enablement": "editorLangId == bibtex"
 			},
 			{
 				"command": "latex-helper.checkBibFileForDuplicateKeys",
-				"title": "LaTeX Helper: Check bib file for duplicate citation keys"
+				"title": "LaTeX Helper: Check bib file for duplicate citation keys",
+				"enablement": "editorLangId == bibtex"
 			},
 			{
-				"command": "latex-helper.addToBibFile",
-				"title": "LaTeX Helper: Add new entries to bib file"
+				"command": "latex-helper.addToBibFileByIDs",
+				"title": "LaTeX Helper: Add new entries to bib file MathSciNet or ArXiV IDs",
+				"enablement": "editorLangId == bibtex"
 			},
 			{
 				"command": "latex-helper.convertCitationKeys",
-				"title": "LaTeX Helper: Converts all citation keys"
+				"title": "LaTeX Helper: Convert all citation keys",
+				"enablement": "editorLangId == bibtex"
 			}
 		],
 		"configuration": [
@@ -93,6 +97,88 @@
 						"type": "number",
 						"default": 80,
 						"description": "Default height of the SVG canvas."
+					},
+					"latex-helper.citationKeyFormat": {
+						"type": "string",
+						"enum": [
+							"Default",
+							"AuthorsYear",
+							"Authors_Title"
+						],
+						"default": "Default",
+						"description": "Choose the format for generating citation keys"
+					},
+					"latex-helper.replacements": {
+						"type": "object",
+						"default": {
+							"top": "top",
+							"homeo": "homeo",
+							"homo": "homo",
+							"diff": "diff",
+							"prod": "prod",
+							"fund": "fund",
+							"embed": "emb",
+							"dimen": "dim",
+							"config": "conf",
+							"neighbor": "nbd",
+							"support": "supp",
+							"finite": "fin",
+							"general": "gen",
+							"constr": "cnstr",
+							"smooth": "smth",
+							"submanif": "submfld",
+							"distrib": "dist",
+							"manif": "mfld",
+							"geod": "geo",
+							"riem": "riem",
+							"variable": "var",
+							"invaria": "inv",
+							"curvature": "curv",
+							"symm": "sym",
+							"compact": "cpt",
+							"charac": "char",
+							"group": "grp",
+							"space": "sp"
+						},
+						"markdownDescription": "A dictionary of word replacements. Works only if `latex-helper.citationKeyFormat` is set to `Authors_Title`"
+					},
+					"latex-helper.commonWords": {
+						"type": "array",
+						"default": [
+							"a",
+							"an",
+							"the",
+							"to",
+							"with",
+							"on",
+							"and",
+							"for",
+							"of",
+							"in",
+							"into",
+							"by",
+							"as",
+							"from",
+							"its",
+							"some",
+							"like"
+						],
+						"markdownDescription": "List of common words to be ignored during citation key generation. Works only if `latex-helper.citationKeyFormat` is set to `Authors_Title`"
+					},
+					"latex-helper.wordsCutoff": {
+						"type": "number",
+						"default": 5,
+						"markdownDescription": "Ignore title words after this cutoff. Works only if `latex-helper.citationKeyFormat` is set to `Authors_Title`"
+					},
+					"latex-helper.authorCutoff": {
+						"type": "number",
+						"default": 3,
+						"markdownDescription": "Cutoff author names. Works only if `latex-helper.citationKeyFormat` is set to `AuthorsYear`"
+					},
+					"latex-helper.autosortBibFile": {
+						"type": "boolean",
+						"default": true,
+						"description": "Automatically sorts the entries in the bib file upon adding new ones."
 					}
 				}
 			}
