--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"version": "0.0.1",
 	"repository": {
 		"type": "git",
-		"url": "https:\\\\www.github.com\\ChesterXXX"
+		"url": "https://www.github.com/ChesterXXX"
 	},
 	"engines": {
 		"vscode": "^1.95.0"
