--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
 			"args": [
 				"--disable-extensions",
 				"--extensionDevelopmentPath=${workspaceFolder}",
-				"--quiet"
+				"--quiet",
+				"C:\\Users\\AritraLappy\\Desktop\\Test"
 			],
 			"outFiles": [
 				"${workspaceFolder}/dist/**/*.js"
